--- a/styling.css
+++ b/styling.css
@@ -3,6 +3,21 @@
     background-color: #140d63;
     text-align: center;
     font-family: Helvetica, Arial, sans-serif;
+    font-size: xx-large;
+    margin-top: 0;
+}
+
+#homeNav {
+    text-align: center;
+    font-family: Helvetica, Arial, sans-serif;
+    font-size: x-large;
+    margin-top: 1%;
+    color:#140d63;
+}
+
+body {
+    margin: 0;
+    color: #140d63;
 }
 
 a {
